--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:title" content="campus-voyage-guide" />
     <meta property="og:description" content="Interactive campus navigation and guide system" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="/MB-logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="/MB-logo.svg" />
   </head>
 
   <body>
