--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>campus-voyage-guide</title>
     <meta name="description" content="Campus Navigation and Guide System" />
-    <meta name="author" content="Campus Voyage Guide Team" />
+    <meta name="author" content=" SIMON MUSIPEX" />
 
-    <meta property="og:title" content="campus-voyage-guide" />
+    <meta property="og:title" content="MUBS|FIND IT" />
     <meta property="og:description" content="Interactive campus navigation and guide system" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="https://www.omniassit.site/" />
     <meta property="og:image" content="/MB-logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/MB-logo.svg" />
+    <meta name="twitter:image" content="/icons8-monzo.svg" />
   </head>
   <body>
     <div id="root"></div>
