--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="MUBS|FIND IT" />
     <meta property="og:description" content="Interactive campus navigation and guide system" />
     <meta property="og:type" content="https://www.omniassit.site/" />
-    <meta property="og:image" content="/MB-logo.svg" />
+    <meta property="og:image" content="/icons8-monzo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/icons8-monzo.svg" />
